[package]
name = "stream-deck-denon-control"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
websocket = { version = "0.26.5", features = ["sync"] }
reqwest = { version = "0.11.12", features = ["blocking"] }

[[bin]]
name = "denon"
path =  "src/main.rs"
